--- a/.gitignore
+++ b/.gitignore
@@ -57,9 +57,10 @@ coverage.xml
 
 # Django stuff:
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+#local_settings.py
+
+#db.sqlite3
+#db.sqlite3-journal
 
 # Flask stuff:
 instance/
